# master-thesis

./: .gitmodules  schewe_10.tex  thesis.tex
code/: .gitignore  CMakeLists.txt  almost_equivalent_states.h  analyze_determinization.py  bin  can_reach_state.h  equivalence_relation.h  find_goal_sccs.cpp  find_goal_sccs.h  hello_world  hello_world.cpp  merge_sccs.h  merge_states.h  product_automaton.h
code/cpphoafparser/: cpphoaf
code/data/: determ_comparison_ap1.csv  schewe.csv  schewe.gnuplot  schewe_detnbaut_ap1.csv  schewe_detnbaut_ap2.csv  schewe_detspot_ap1.csv  schewe_detspot_ap2.csv  schewe_detspot_noopt_ap1.csv  schewe_detspot_noopt_ap2.csv  schewe_gendet.gnuplot  schewe_gendet_ap1.csv  schewe_gendet_ap2.csv  schewe_gendet_ap3.csv
code/schewe10/: almost_equivalent_states.h  can_reach_state.h  equivalence_relation.h  find_goal_sccs.h  merge_sccs.h  merge_states.h  product_automaton.cpp  product_automaton.h  random_statistics.py  run_schewe_experiment.sh  schewe_automaton.h  schewe_main.cpp  schewe_statistics.cpp  test_almost_equivalent_states.cpp  test_backwards_automaton.cpp  test_can_reach_state.cpp  test_correctness_random.sh  test_find_goal_sccs.cpp  test_merge_sccs.cpp  test_merge_states.cpp  test_product_automaton.cpp  testaut.hoa  topological_ordering.h
code/src/: construction_executioner.cpp  construction_executioner.h  construction_main.cpp  construction_main.h  construction_statistics.cpp  construction_statistics.h  equivalence_relation.h  hello_world.cpp  rawstats.cpp  transition_based_converter.cpp
code/src/automaton/: almost_equivalent_states.h  almost_equivalent_states.impl.h  deterministic_automaton.cpp  deterministic_automaton.h  finite_automaton.h  is_specialization_base_of.h  labelled_automaton.h  labelled_automaton.impl.h  nbautils_bridge.h  nbautils_bridge.impl.h  nondeterministic_automaton.cpp  nondeterministic_automaton.h  parity.cpp  parity.h  parity_util.cpp  parity_util.h  parity_util.impl.h  transition_automaton.h  transition_util.cpp  transition_util.h  transition_util.impl.h  util.cpp  util.h  util.impl.h
code/src/automaton/automata/: generate_worst_automata.cpp  max_michelle.cpp  max_michelle.h
code/src/automaton/hoa/: boolean_evaluation.h  dpa_consumer.cpp  dpa_consumer.h  hoa_consumer_debug.h  hoa_io.cpp  hoa_io.h  hoa_io.impl.h  nbautils_post.h  npa_consumer.cpp  npa_consumer.h  pa_consumer.cpp  pa_consumer.h  transition_labeled_pa_consumer.cpp  transition_labeled_pa_consumer.h
code/src/automaton/tests/: helper_functions.h  test_almost_equivalent_states.cpp  test_automata.cpp  test_hoa.cpp  test_main.cpp  test_nbautils_bridge.cpp  test_parity_util.cpp  test_transition_util.cpp  test_util.cpp
code/src/everything/: main_statistics.cpp  main_statistics.h
code/src/everything_safra/: main_statistics.cpp  main_statistics.h
code/src/fritzwilke06/: callgrind.out.14609  delayed_simulation.cpp  delayed_simulation.h  delayed_simulation_automaton.cpp  delayed_simulation_automaton.h  fritzwilke_main.cpp  fritzwilke_statistics.cpp  gamma.cpp  gamma.h  main_statistics.cpp  main_statistics.h
code/src/fritzwilke06/tests/: test_correctness_file.sh  test_correctness_random.sh  test_data.sh  test_delayed_simulation.cpp  test_delayed_simulation_automaton.cpp  test_main.cpp
code/src/hopcroft/: main_statistics.cpp  main_statistics.h
code/src/iterated_moore/: iterated_moore.cpp  iterated_moore.h  iterated_moore_main.cpp  iterated_moore_statistics.cpp  main_statistics.cpp  main_statistics.h
code/src/iterated_moore/tests/: test_iterated_moore.cpp
code/src/lsf/: lsf_relation.cpp  lsf_relation.h  main_statistics.cpp  main_statistics.h
code/src/lsf/tests/: test_lsf_relation.cpp  test_main.cpp
code/src/path_refinement/: main_lambda_order.cpp  main_statistics.cpp  main_statistics.h  nbautils_post.cpp  nbautils_post.h  path_refinement.cpp  path_refinement.h  path_refinement_automaton.cpp  path_refinement_automaton.h  path_refinement_main.cpp  path_refinement_statistics.cpp  visit_graph.cpp  visit_graph.h
code/src/path_refinement/tests/: test_main.cpp  test_nbautils_post.cpp  test_path_refinement_automaton.cpp  test_visit_equality.cpp
code/src/schewe10/: almost_equivalent_states.h  almost_equivalent_states.impl.h  backwards_automaton.h  equivalence_relation.h  main_statistics.cpp  main_statistics.h  merge_sccs.h  merge_states.h  product_automaton.cpp  schewe_automaton.cpp  schewe_automaton.h  schewe_main.cpp  schewe_statistics.cpp  testaut.hoa  topological_ordering.h  topological_ordering.impl.h
code/src/schewe10/tests/: test_almost_equivalent_states.cpp  test_backwards_automaton.cpp  test_can_reach_state.cpp  test_correctness_random.sh  test_find_goal_sccs.cpp  test_main.cpp  test_merge_sccs.cpp  test_merge_states.cpp  test_product_automaton.cpp  test_schewe10.cpp  test_schewe_automaton.cpp  test_topological_ordering.cpp
code/src/scripts/: analyze_determinization.py  check_correctness.py  everything_safra_statistics.py  everything_statistics.py  fritzwilke06_run_experiments.sh  fritzwilke06_statistics.py  hopcroft_run_experiment.sh  hopcroft_statistics.py  iterated_moore_run_experiments.sh  iterated_moore_statistics.py  lsf_run_experiments.sh  lsf_statistics.py  path_refinement_lambda_order.py  path_refinement_run_experiments.sh  path_refinement_statistics.py  rawstats.py  rawstats.sh  run_experiments.py  run_statistics.py  run_syntcomp.py  schewe10_random_statistics.py  schewe10_run_experiment.sh  schewe10_statistics.py  skipper_run_experiment.sh  skipper_statistics.py  tremoore_run_experiments.sh  tremoore_statistics.py
code/src/simple_langeq/: main_statistics.cpp  main_statistics.h
code/src/skipper/: main_statistics.cpp  main_statistics.h  skipper_automaton.cpp  skipper_automaton.h
code/src/threshold_moore/: main_statistics.cpp  main_statistics.h  moore_ltk.cpp  moore_ltk.h  tm_relation.cpp  tm_relation.h
code/src/threshold_moore/tests/: test_main.cpp  test_moore_ltk.cpp  test_tm_relation.cpp
code/src/util/: equivalence_relation.h  equivalence_relation.impl.h
code/src/util/tests/: test_equivalence_relation.cpp  (+1 more)
(+3913 files in other folders)
